bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: bitwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bitwarden-rs
  name: bitwarden-bitwarden-rs
  namespace: bitwarden
spec:
  clusterIP: ""
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: websocket
      port: 3012
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: bitwarden
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bitwarden-rs
  type: ClusterIP
