bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: bitwarden
  namespace: bitwarden
spec:
  rules:
    - host: bitwarden.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: homelab-bitwarden-web
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bitwarden.int.kyledev.co
      secretName: wildcard-kyledev-tls-prod
